# survey-app

./: .env  .env.docker.example  .gitignore  README.md  app.py  collection.json  config.py  docker-compose.yml  postman_collection.json  pyproject.toml  sample-survey.csv
migrations/versions/: 9968eac30af0_add_options_column_to_question_model.py  db35880f1918_add_user_table_for_authentication.py
nginx/: nginx.conf
src/: __init__.py  analytics_api.py  auth_api.py  email_api.py  models.py  submission_api.py  survey_api.py  webhook.py
survey-backend/: .env.example  Dockerfile  config.py  entrypoint.sh  pyproject.toml  requirements.txt  run.py
survey-backend/migrations/versions/: 68bc5e88fd60_change_answer_value_column_to_jsonb.py  c1bbaaf318b8_add_status_and_publish_date_to_survey_.py  cefce2df43e2_initial_migration_with_survey_tables.py  fa916c14a4c7_add_is_external_flag_to_survey_model.py
survey-backend/src/: __init__.py  email_api.py  models.py  public_api.py  submission_api.py  survey_api.py  webhook.py
survey-frontend/: .prettierrc  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
survey-frontend/src/: main.tsx  routeTree.gen.ts  theme.ts
survey-frontend/src/api/: apiClient.ts
survey-frontend/src/components/: AnalyticsCharts.tsx  CSVImportModal.tsx  DeleteConfirmationDialog.tsx  ErrorDisplay.tsx  LoadingSpinner.tsx  Navbar.tsx  SendSurveyModal.tsx  Sidebar.tsx  SubmissionRow.tsx
survey-frontend/src/context/: AuthContext.tsx
survey-frontend/src/layouts/: MainLayout.tsx
survey-frontend/src/routes/: __root.tsx  (+2 more)
(+9 files in other folders)
